--- a/client/shoppingbasket.html
+++ b/client/shoppingbasket.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Sogyo Adventure</title>
-        <meta name="description" content="The ticket shop for Sogyo employees">
+        <title>Family Adventure Tickets</title>
+        <meta name="description" content="The ticket shop for family adventures on a discount">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style/main.css">
         <link rel="stylesheet" href="style/shoppingbasket.css">
