more on Taking admin and myorders out of the scope of the project

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
             <img src="img/logo_sogyo_rgb_199x200-1.jpg">
         </header>
         <header id="mainheader">
-            Adventure
+            Family Adventure Tickets
         </header>
         <nav>
             <a id="home" href="index.html">
