--- a/client/map.html
+++ b/client/map.html
@@ -12,12 +12,12 @@
     </head>
 
     <body>
-
+        
         <header id="logo-header">
             <img src="img/logo_sogyo_rgb_199x200-1.jpg">
         </header>
         <header id="mainheader">
-            Adventure
+            Family Adventure Tickets
         </header>
         <nav>
             <a id="home" href="index.html">
@@ -29,15 +29,8 @@
             </a>
             |
             <a id="shoppingbasket" href="shoppingbasket.html">
-                Shopping basket <div class="badge">0</div>
-            </a>
-            |
-            <a id="myorders" href="orders.html">
-                My orders
-            </a>
-            |
-            <a id="admin" href="admin.html">
-                Admin
+                Shopping basket
+                <div class="badge">0</div>
             </a>
         </nav>
 
