Orderplaced page needed to match the rest of the website style a bit more

--- a/client/orderplaced.html
+++ b/client/orderplaced.html
@@ -16,7 +16,7 @@
             <img src="img/logo_sogyo_rgb_199x200-1.jpg">
         </header>
         <header id="mainheader">
-            Adventure
+            Family Adventure Tickets
         </header>
         <nav>
             <a id="home" href="index.html">
@@ -28,22 +28,13 @@
             </a>
             |
             <a id="shoppingbasket" href="shoppingbasket.html">
-                Shopping basket <div class="badge">0</div>
-            </a>
-            |
-            <a id="myorders" href="orders.html">
-                My orders
-            </a>
-            |
-            <a id="admin" href="admin.html">
-                Admin
+                Shopping basket
+                <div class="badge">0</div>
             </a>
         </nav>
 
-        <main>
-
-            Your order has been placed.
-
+        <main id="orderplaced">
+            Thanks! Your order has been placed.
         </main>
         
     </body>
