Removin logo but keeping transparent background on the top

--- a/client/index.html
+++ b/client/index.html
@@ -12,9 +12,7 @@
     </head>
 
     <body>
-        <header id="logo-header">
-            <img src="img/logo_sogyo_rgb_199x200-1.jpg">
-        </header>
+        <header id="logo-header"></header>
         <header id="mainheader">
             Family Adventure Tickets
         </header>
