--- a/client/orderplaced.html
+++ b/client/orderplaced.html
@@ -4,17 +4,15 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Sogyo Adventure</title>
-        <meta name="description" content="The ticket shop for Sogyo employees">
+        <title>Family Adventure Tickets</title>
+        <meta name="description" content="The ticket shop for family adventures on a discount">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style/main.css">
     </head>
 
     <body>
 
-        <header id="logo-header">
-            <img src="img/logo_sogyo_rgb_199x200-1.jpg">
-        </header>
+        <header id="logo-header"></header>
         <header id="mainheader">
             Family Adventure Tickets
         </header>
