--- a/client/shoppingbasket.html
+++ b/client/shoppingbasket.html
@@ -14,9 +14,7 @@
 
     <body>
 
-        <header id="logo-header">
-            <img src="img/logo_sogyo_rgb_199x200-1.jpg">
-        </header>
+        <header id="logo-header"></header>
         <header id="mainheader">
             Family Adventure Tickets
         </header>
