--- a/client/map.html
+++ b/client/map.html
@@ -9,6 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style/main.css">
         <link rel="stylesheet" href="style/map.css">
+        <link rel="stylesheet" href="/node_modules/leaflet/dist/leaflet.css" />
     </head>
 
     <body>
@@ -38,6 +39,6 @@
 
         </main>
 
-        <script src="src/index.js"></script>
+        <script src="/node_modules/leaflet/dist/leaflet.js"></script>
     </body>
 </html>
