--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
             </a>
             |
             <a id="map" href="map.html">
-                Discover
+                Discover Attractions
             </a>
             |
             <a id="shoppingbasket" href="shoppingbasket.html">
