--- a/client/map.html
+++ b/client/map.html
@@ -26,7 +26,7 @@
             </a>
             |
             <a id="map" href="map.html">
-                Discover
+                Discover Attractions
             </a>
             |
             <a id="shoppingbasket" href="shoppingbasket.html">
