--- a/client/shoppingbasket.html
+++ b/client/shoppingbasket.html
@@ -24,7 +24,7 @@
             </a>
             |
             <a id="map" href="map.html">
-                Discover
+                Discover Attractions
             </a>
             |
             <a id="shoppingbasket" href="shoppingbasket.html">
